src/global.css
:root {
	--font: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui,
		helvetica neue, helvetica, Ubuntu, roboto, noto, arial, sans-serif;
	--text: #222;
	--bg: #fff;
	--bg1: #efeff7;
	--accent: #5e5e85;
	--hover: #8282f7;
	--active: #4242a3;
	--i: #4bc078;
	--t: #ff6384;
	--d: #36a2eb;
}
@media (prefers-color-scheme: dark) {
	:root {
		--text: #fff;
		--bg: #202030;
		--bg1: #303040;
		--accent: #5b5b8b;
		--hover: #7474c2;
		--active: #9494ff;
	}
}

html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

html {
	font-family: var(--font);
	color: var(--text);
	background-color: var(--bg);
}

body {
	margin: 0;
	overflow-y: scroll;
}

#app {
	min-height: 100vh;
	display: flex;
	flex-direction: column;
	align-items: center;
}

input, button, select {
	font-family: inherit;
}

h1:focus, h2:focus, h3:focus, h4:focus, h5:focus, h6:focus {
	/* Svelte Navigator focuses headlines for accessibility. */
	outline: none;
}

h1:first-child,
h2:first-child,
h3:first-child,
h4:first-child,
h5:first-child,
h6:first-child {
	margin-top: 0;
}

